crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__can_parse_static_blocks.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: parse(input.into())
---
Ok(
    DecorousAst {
        nodes: [],
        script: None,
        css: None,
        wasm: Some(
            Code {
                lang: "js",
                body: " console.log(\"hello\"); ",
                offset: 12,
                comptime: true,
            },
        ),
    },
)
