crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__can_parse_use_decls.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: ast
---
Ok(
    DecorousAst {
        nodes: [
            Node {
                metadata: Location {
                    offset: 2,
                    length: 11,
                },
                node_type: SpecialBlock(
                    Use(
                        UseBlock {
                            path: "path",
                        },
                    ),
                ),
            },
            Node {
                metadata: Location {
                    offset: 13,
                    length: 2,
                },
                node_type: Text(
                    Text(
                        " ",
                    ),
                ),
            },
            Node {
                metadata: Location {
                    offset: 15,
                    length: 10,
                },
                node_type: Element(
                    Element {
                        tag: "p",
                        attrs: [],
                        children: [
                            Node {
                                metadata: Location {
                                    offset: 16,
                                    length: 8,
                                },
                                node_type: Text(
                                    Text(
                                        "hello",
                                    ),
                                ),
                            },
                        ],
                    },
                ),
            },
        ],
        script: None,
        css: None,
        wasm: None,
        comptime: None,
    },
)
