crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__can_preprocess.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: ast
---
Ok(
    DecorousAst {
        nodes: [],
        script: Some(
            MODULE@0..29
              EXPR_STMT@0..29
                CALL_EXPR@0..28
                  DOT_EXPR@0..11
                    NAME_REF@0..7
                      IDENT@0..7 "console"
                    DOT@7..8 "."
                    NAME@8..11
                      IDENT@8..11 "log"
                  ARG_LIST@11..28
                    L_PAREN@11..12 "("
                    LITERAL@12..27
                      STRING@12..27 "\" typescript? \""
                    R_PAREN@27..28 ")"
                SEMICOLON@28..29 ";"
            ,
        ),
        css: Some(
            Css {
                rules: [
                    Regular(
                        RegularRule {
                            selector: [
                                Selector {
                                    parts: [
                                        SelectorPart {
                                            text: Some(
                                                "p",
                                            ),
                                            pseudoes: [],
                                        },
                                    ],
                                },
                            ],
                            declarations: [
                                Declaration {
                                    name: "color",
                                    values: [
                                        Css(
                                            "hello ",
                                        ),
                                    ],
                                },
                            ],
                        },
                    ),
                ],
            },
        ),
        wasm: None,
        comptime: None,
    },
)
