crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__cannot_have_two_code_blocks_of_same_type-3.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: ast
---
Err(
    ParseError {
        fragment: Location {
            offset: 25,
            length: 1,
        },
        help: None,
        err_type: CannotHaveTwoWasmBlocks,
    },
)
