crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__cannot_have_two_code_blocks_of_same_type.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: parse(input.into())
---
Err(
    Report {
        errors: [
            ParseError {
                fragment: Location {
                    offset: 26,
                    length: 1,
                    line: 1,
                    column: 27,
                },
                help: None,
                err_type: CannotHaveTwoScripts,
            },
        ],
    },
)
