crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__cannot_have_two_preprocessed_scripts.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: ast
---
Err(
    ParseError {
        fragment: Location {
            offset: 20,
            length: 1,
        },
        help: None,
        err_type: CannotHaveTwoStyles,
    },
)
