crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__css_can_appear_after_template.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: ast
---
Ok(
    DecorousAst {
        nodes: [
            Node {
                metadata: Location {
                    offset: 1,
                    length: 10,
                },
                node_type: Element(
                    Element {
                        tag: "p",
                        attrs: [],
                        children: [
                            Node {
                                metadata: Location {
                                    offset: 2,
                                    length: 8,
                                },
                                node_type: Text(
                                    Text(
                                        "Hello",
                                    ),
                                ),
                            },
                        ],
                    },
                ),
            },
        ],
        script: None,
        css: Some(
            Css {
                rules: [
                    Regular(
                        RegularRule {
                            selector: [
                                Selector {
                                    parts: [
                                        SelectorPart {
                                            text: Some(
                                                "p",
                                            ),
                                            pseudoes: [],
                                        },
                                    ],
                                },
                            ],
                            declarations: [
                                Declaration {
                                    name: "color",
                                    values: [
                                        Css(
                                            "blue",
                                        ),
                                    ],
                                },
                            ],
                        },
                    ),
                ],
            },
        ),
        wasm: None,
        comptime: None,
    },
)
