crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__javascript_parse_errors_have_proper_location_offsets.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: ast
---
Err(
    ParseError {
        fragment: Location {
            offset: 12,
            length: 1,
        },
        help: None,
        err_type: JavaScriptDiagnostics {
            title: "expected an expression, but found `;` instead",
        },
    },
)
