crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__mustaches_allow_for_curly_braces.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: mustache(input.into())
---
Ok(
    (
        LocatedSpan {
            offset: 37,
            line: 1,
            fragment: "",
            extra: (),
        },
        MODULE@0..35
          EXPR_STMT@0..8
            CALL_EXPR@0..8
              NAME_REF@0..5
                IDENT@0..5 "hello"
              WHITESPACE@5..6 " "
              ARG_LIST@6..8
                L_PAREN@6..7 "("
                R_PAREN@7..8 ")"
          WHITESPACE@8..9 " "
          ERROR@9..11
            FAT_ARROW@9..11 "=>"
          WHITESPACE@11..12 " "
          BLOCK_STMT@12..33
            L_CURLY@12..13 "{"
            WHITESPACE@13..14 " "
            EXPR_STMT@14..31
              CALL_EXPR@14..31
                DOT_EXPR@14..25
                  NAME_REF@14..21
                    IDENT@14..21 "console"
                  DOT@21..22 "."
                  NAME@22..25
                    IDENT@22..25 "log"
                ARG_LIST@25..31
                  L_PAREN@25..26 "("
                  LITERAL@26..30
                    STRING@26..30 "\"hi\""
                  R_PAREN@30..31 ")"
            WHITESPACE@31..32 " "
            R_CURLY@32..33 "}"
          WHITESPACE@33..35 "  "
        ,
    ),
)
